/* 
  Localizable.strings
  WordChecker

  Created by Jaewon Yun on 2023/08/23.
  
*/

ok = "Ok";
cancel = "Cancel";
notice = "Notice";

translation_site_alert_message = "There is a problem with your current translation site. Please go to Settings and set it to a different translation site.";

add = "Add";
addWord = "Add word";
next = "Next";
previous = "Previous";
noWords = "No words";
list = "List";
wordList = "Word list";
delete = "Delete";
edit = "Edit";
editWord = "Edit word";
shuffleOrder = "Shuffle order";
translate = "Translate";
deleteWord = "Delete word";
word = "Word";
done = "Done";
details = "Details";
memorizing = "Memorizing";
memorized = "Memorized";
check = "Check";
memorization = "Memorization";
newWord = "New word";
discardChanges = "Discard Changes";
all = "All";
there_are_no_words = "There are no words.";
quick_add_word = "Quick add word";
"%@_added_successfully" = "[ %@ ] added successfully";
settings = "Settings";
translation_language = "Translation language";

languages = "Languages";
source_language = "Source language";
sync_google_drive = "Google Drive Sync";
google_drive_upload = "Upload data to Google Drive";
google_drive_upload_successfully = "Successfully uploading to Google Drive";

google_drive_download = "Download data from Google Drive";
google_drive_download_successfully = "Successfully downloading from Google Drive";

google_drive_logout = "Google Drive Logout";
signed_out_of_google_drive = "Signed out of Google Drive.";

synchronize_to_google_drive = "Synchronize to Google Drive.";

korean = "Korean";
english = "English";
japanese = "Japanese";
chinese = "Chinese";
french = "French";
spanish = "Spanish";
italian = "Italian";
german = "German";
russian = "Russian";
