//
//  AccessibilityIdentifier.swift
//  WordChecker
//
//  Created by Jaewon Yun on 2023/08/28.
//

import Foundation

public enum AccessibilityIdentifier {

    public enum WordChecking {

        public static let addWordButton = "WORDCHECKING_ADD_WORD_BUTTON"

        public static let listButton = "WORDCHECKING_LIST_BUTTON"

        public static let moreButton = "WORDCHECKING_MORE_BUTTON"

        public static let wordLabel = "WORDCHECKING_WORD_LABEL"

        public static let previousButton = "WORDCHECKING_PREVIOUS_BUTTON"

        public static let nextButton = "WORDCHECKING_NEXT_BUTTON"

    }

    public enum WordDetail {

        public static let wordTextField = "WORDDETAIL_WORD_TEXTFIELD"

        public static let memorizationStateButton = "WORDDETAIL_MEMORIZATION_STATE_BUTTON"

    }

    public enum WordList {

        public static let addWordButton = "WORDLIST_ADD_WORD_BUTTON"

    }

}
