//
//  AccessibilityIdentifier.swift
//  IOSScene_WordChecking
//
//  Created by Jaewon Yun on 2/26/24.
//  Copyright © 2024 woin2ee. All rights reserved.
//

import Foundation

enum AccessibilityIdentifier {
    static let wordTextField = "WORDDETAIL_WORD_TEXTFIELD"
    static let memorizingButton = "WORDDETAIL_MEMORIZING_BUTTON"
    static let memorizedButton = "WORDDETAIL_MEMORIZED_BUTTON"
}
