//
//  AccessibilityIdentifier.swift
//  IOSScene_WordChecking
//
//  Created by Jaewon Yun on 2/26/24.
//  Copyright © 2024 woin2ee. All rights reserved.
//

import Foundation

enum AccessibilityIdentifier {
    static let addWordButton = "WORDCHECKING_ADD_WORD_BUTTON"
    static let listButton = "WORDCHECKING_LIST_BUTTON"
    static let moreButton = "WORDCHECKING_MORE_BUTTON"
    static let wordLabel = "WORDCHECKING_WORD_LABEL"
    static let previousButton = "WORDCHECKING_PREVIOUS_BUTTON"
    static let nextButton = "WORDCHECKING_NEXT_BUTTON"
}
